@@ -12,6 +12,10 @@ module DropFilters
     path = path_or_section.is_a?(SectionDrop) ? path_or_section['path'] : path_or_section
     @context['site'].find_descendant_sections(path)
   end
+  
+  def linked_section_list(article, seperator = ', ')
+    article.sections.collect {|s| link_to_section s }.join(seperator)
+  end
 
   def latest_articles(site_or_section, limit = nil)
     site_or_section.latest_articles(limit || site_or_section['articles_per_page'])
