@@ -2,7 +2,7 @@
 <!-- begin action nav -->
 <div id="page-nav">
   <ul id="act-nav" class="clear">
-    <li><%= link_to_remote 'Clear Comments', :confirm => "Are you sure you wish to clear all visible comments?",
+    <li><%= link_to_remote 'Delete these comments', :confirm => "Are you sure you wish to delete all of these comments?",
         :url  => { :controller => 'articles', :action => 'destroy_comment' }, 
         :with => "ArticleForm.getAvailableComments().toQueryString('comment')"
       %></li>
@@ -11,7 +11,7 @@
 <!-- /end action nav -->
 <% end %>
 
-<h2>Unapproved Comments</h2>
+<h3><%= pluralize(@comments.size, 'Unapproved Comment') %></h3>
 
 <ul class="pagelist commentlist">
   <% @comments.reverse.each_with_index do |comment, i| -%>
