@@ -1,20 +1,25 @@
-<div id="theme-info">
+<div id="theme-info" class="clearfix">
   <h3>
     <%= @theme.title %> (v<%= @theme.version %>)by <% if @theme.author %><a href="<%= @theme.homepage %>"><%= @theme.author %></a><% else %>Unknown<% end %>
     <%= link_to_function 'close', 'Dialog.close()', :id => 'close-dialog' %>
   </h3>
-<ul>
-<% unless @theme.current? -%>
-  <li><%= link_to 'Use theme', :action => 'change_to', :id => @theme %></li>
-  <li><%= link_to 'Edit theme', :controller => 'design', :action => 'index', :theme => @theme %></li>
-<% else -%>
-  <li><%= link_to 'Edit theme', :controller => 'design', :action => 'index' %></li>
-<% end -%>
-  <!--li><a href="#" title="title">Change info</a></li-->
-  <li><%= link_to 'Download theme', :action => 'export', :id => @theme %></li>
-<% unless @theme.current? -%>
-  <li><%= link_to_remote 'Remove theme', :url => {:action => 'destroy', :id => @theme}, :method => :delete,
-            :confirm => "Are you sure you wish to remove this theme stored at 'others/#{@theme.path.relative_path_from(site.other_themes_path).to_s}'?" %></li>
-<% end -%>
-</ul>
+  <div id="screenshot">
+    <img src="<%= url_for(:controller => '/admin/themes', :action => 'preview_for', :id => @theme) %>" alt="Theme preview" title="<%=h @theme.title %> (v<%=h @theme.version %>)" />
+    <p><%= @theme.summary %></p>
+  </div>
+  <div id="theme-options">
+    <ul>
+    <% unless @theme.current? -%>
+      <li><%= link_to 'Use theme', :action => 'change_to', :id => @theme %></li>
+      <li><%= link_to 'Edit theme', :controller => 'design', :action => 'index', :theme => @theme %></li>
+    <% else -%>
+      <li><%= link_to 'Edit theme', :controller => 'design', :action => 'index' %></li>
+    <% end -%>
+      <li><%= link_to 'Download theme', :action => 'export', :id => @theme %></li>
+    <% unless @theme.current? -%>
+      <li><%= link_to_remote 'Delete theme', :url => {:action => 'destroy', :id => @theme}, :method => :delete,
+                :confirm => "Are you sure you wish to delete this theme stored at 'others/#{@theme.path.relative_path_from(site.other_themes_path).to_s}'?" %></li>
+    <% end -%>
+    </ul>
+  </div>
 </div>
