@@ -80,8 +80,8 @@ ActiveRecord::Schema.define(:version => 66) do
     t.column "author_email",   :string
     t.column "author_ip",      :string,   :limit => 100
     t.column "comments_count", :integer,                 :default => 0
-    t.column "updater_id",     :integer
     t.column "version",        :integer
+    t.column "updater_id",     :integer
     t.column "site_id",        :integer
     t.column "approved",       :boolean,                 :default => false
     t.column "comment_age",    :integer,                 :default => 0
@@ -92,11 +92,11 @@ ActiveRecord::Schema.define(:version => 66) do
 
   create_table "events", :force => true do |t|
     t.column "mode",       :string
-    t.column "user_id",    :integer
     t.column "article_id", :integer
     t.column "title",      :text
     t.column "body",       :text
     t.column "created_at", :datetime
+    t.column "user_id",    :integer
     t.column "author",     :string,   :limit => 100
     t.column "comment_id", :integer
     t.column "site_id",    :integer
